# Jianlishengcheng

./: .gitignore  AGENTS.md  README.md  opencode.jsonc  系统运行配置与AI提示词说明.md  训练与评估记录.md  项目说明.md
.opencode/agents/: architect.md  docs-updater.md  git-admin.md  planner.md  team-lead.md
.opencode/docs/: AGENTS_CONFIG.md
.opencode/memory/: MEMORY.md
.opencode/memory/logs/: 2026-07-06.md  2026-07-10.md
.opencode/plans/: resume-system-plan.md
.opencode/skills/: README.md
.opencode/skills/harmony-arkts/: SKILL.md
.opencode/skills/harmony-build-debug/: SKILL.md
.opencode/skills/harmony-doc-search/: SKILL.md
.opencode/skills/harmony-error-fixes/: README.md  SKILL.md
.opencode/skills/harmony-jscrash-fixes/: SKILL.md
.opencode/skills/harmony-page-incremental/: SKILL.md
.opencode/skills/harmony-page-zero-to-one/: SKILL.md
.opencode/skills/harmony-ui/: SKILL.md
AppScope/: app.json5
docs/superpowers/plans/: 2026-07-07-ai-tech-ui.md
docs/superpowers/specs/: 2026-07-07-ai-tech-ui-design.md
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  onnx_session.cpp  onnx_session.h  resume_generator.cpp  resume_generator.h  tokenizer.cpp  tokenizer.h
entry/src/main/cpp/types/libresume_napi/: Index.d.ts
scripts/: port-forward.bat  port-forward.ps1  start-all.bat  start-backend.bat
server/: __init__.py  app.py  models.py  pdf_service.py  prompt.py  requirements.txt  resume_service.py  run.py
server/scripts/: evaluate_resume_model.py  prepare_resume_dataset.py  train_resume_model.py
server/tests/: test_resume_api.py
(+113 files in other folders)
